[package]
name = "rhexdump"
version = "0.2.0"
authors = ["mocka <mocka.nara@gmail.com>"]
edition = "2021"
description = "A hexdump library to display binary blobs."
documentation = "https://docs.rs/rhexdump"
readme = "README.md"
repository = "https://github.com/m0cka/rhexdump/"
license = "GPL-3.0-or-later"
keywords = ["hex", "hexdump", "library"]
categories = ["visualization", "encoding"]

[dependencies]
